feat/correction of function and file names corresponding to work history routes
