# back-end/src/routes/work-history/interfaces/iwork-history.ts
@@ -1,0 +1,7 @@
+export default interface IWorkHistory {
+  company: string
+  office: string
+  office_description: string
+  when_arrived: Date
+  when_came_out?: Date
+}
